# paradox-6

./: .gitignore  README.md  SETUP.md  flake.nix  garbage.sh
bash/: setup-files.sh
circuits/noir/multiplication/: Nargo.toml
circuits/noir/multiplication/src/: main.nr
circuits/noir/signature/: Nargo.toml  readme.md
circuits/noir/signature/src/: main.nr
circuits/noir/test/: Nargo.toml
circuits/noir/test/proofs/: test.proof
mock-client/: Cargo.toml
mock-client/src/: constants.rs  main.rs
zk-node/: Cargo.toml  Rocket.toml
zk-node/src/: constants.rs  lib.rs  main.rs  types.rs
zk-node/src/circom/: mod.rs  types.rs  verifier.rs
zk-node/src/node/: messages.rs  mod.rs  receiver.rs  response.rs  router.rs
zk-node/src/noir/: constants.rs  mod.rs  verifier.rs
zk-node/src/storage/: mod.rs  storer.rs
zk-node/src/sync/: gossip.rs
