[package]
name = "zk-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
# Rocket
rocket = "0.5.0"
rocket_contrib = "0.4.11"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
unescape = "0.1.0"

tokio = {version = "1.34.0", features = ["full"]}
async-trait = "0.1.74"
mini-redis = "0.4"
rusqlite = "0.29.0"
tempfile = "3.6.0"

# Crypto
ring-compat = "0.8.0"
rand_core = "0.6.4"
ed25519 = "2.2.3"
base64 = "0.21.5"

# Arkworks dependencies
ark-crypto-primitives = { version = "= 0.4.0" }
ark-ec = { version= "= 0.4.1", default-features = false }
ark-circom = { git = "https://github.com/jonas089/circom-compat" }
ark-bls12-377 = "0.4.0"
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"]}
num-bigint = "0.4.3"
ark-serialize = { version = "0.4", features = ["derive"] }

